# SatoshisEndgame

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml  quickstart.sh  requirements.txt  research.md  restart.sh  satoshis-endgame.service.template  service.sh  setup.py  simple_webhook_test.py  test_webhook.py  test_webhook.sh
data/: vulnerable_addresses.txt
docs/: TESTING.md  api-limits.md  block-monitoring.md  service-setup.md
scripts/: README.md  add_has_moved_column.py  demo_block_monitoring.py  demo_block_monitoring_simple.py  import_bitinfocharts.py  import_dormant_addresses.py  optimize_monitoring.py  test_block_monitoring.py
src/: cli.py
src/config/: monitoring_config.py  settings.py
src/core/: __init__.py  address_manager.py  blockchain.py
src/data/: __init__.py  database.py  models.py
src/scrapers/: README.md  __init__.py  bitinfocharts_scraper.py  bitinfocharts_scraper_v2.py  test_scraper.py
src/services/: __init__.py  block_monitor.py  monitoring_service.py  notification_service.py  quantum_detector.py
src/utils/: init_data.py
