[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satoshis-endgame"
version = "0.1.0"
description = "Bitcoin quantum vulnerability monitoring system"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "bitcoinlib>=0.6.15",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "discord-webhook>=1.3.1",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "click>=8.1.8",
    "rich>=13.9.4"
]

[project.scripts]
satoshis-endgame = "src.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true